#21 add marvin component and test, update template.env

--- a/template.env
+++ b/template.env
@@ -1,4 +1,5 @@
 VUE_APP_KETCHER_URL="http://localhost:8002"
+VUE_APP_MARVIN_URL="http://localhost:8047"
 VUE_APP_API_URL="http://localhost:8000"
 
 VUE_APP_TEST_ADMIN_USER="karyn"
