#29 restore setTimeout for marvin, update Dockerfile, update v-data for text Ketcher

--- a/marvin/Dockerfile
+++ b/marvin/Dockerfile
@@ -1,3 +1,9 @@
 FROM hub.chemaxon.com/cxn-docker-release/chemaxon/mjs-webservice
-COPY license_MJS.cxl /home/cxnapp/.chemaxon/licenses/license_MJS.cxl
+ARG lic="US Env Lic.cxl"
+ARG mjs="US Env Lic MJS.cxl"
+ARG mrk="US Env Lic Markush E.cxl"
+ARG target="/home/cxnapp/.chemaxon/licenses/"
+COPY ${lic} ${target}
+COPY ${mjs} ${target}
+COPY ${mrk} ${target}
 COPY editorws.html /app/mjs-webservice/static/editorws.html
