--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.14.0",
     "core-js": "^3.6.5",
+    "jquery": "^3.5.1",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.6",
