--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^5.0.0",
+    "eslint-plugin-jest": "^23.20.0",
     "prettier": "^1.19.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.0",
