--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "ag-grid-community": "^23.2.1",
+    "ag-grid-vue": "^23.2.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "bootstrap-vue": "^2.14.0",
     "core-js": "^3.6.5",
+    "lodash": "^4.17.20",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.10",
+    "vue-class-component": "^7.2.5",
+    "vue-property-decorator": "^9.0.0",
     "vue-router": "^3.1.6",
     "vuex": "^3.4.0"
   },
@@ -33,9 +38,9 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^5.16.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-jest": "^23.20.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^5.0.0",
-    "eslint-plugin-jest": "^23.20.0",
     "prettier": "^1.19.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.0",
