--- a/template.env
+++ b/template.env
@@ -4,3 +4,6 @@ VUE_APP_API_URL="http://localhost:8000"
 
 VUE_APP_TEST_ADMIN_USER="karyn"
 VUE_APP_TEST_ADMIN_PASS="specialP@55word"
+
+VUE_APP_TEST_USER="anonymous"
+VUE_APP_TEST_PASS="specialP@55word"
