add cookie generation to login

--- a/template.env
+++ b/template.env
@@ -1,6 +1,8 @@
 VUE_APP_KETCHER_URL="http://localhost:8002"
 VUE_APP_MARVIN_URL="http://localhost:8047"
 VUE_APP_API_URL="http://localhost:8000"
+# https://www.npmjs.com/package/vue-cookies#set-expire-times--input-string-type
+VUE_APP_COOKIE_DURATION="30d"
 
 VUE_APP_TEST_ADMIN_USER="karyn"
 VUE_APP_TEST_ADMIN_PASS="specialP@55word"
