--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.10",
     "vue-class-component": "^7.2.5",
+    "vue-cookies": "^1.7.4",
     "vue-property-decorator": "^9.0.0",
     "vue-router": "^3.1.6",
     "vuex": "^3.4.0"
